--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -28,6 +28,7 @@ form input {
   border: 1px solid #dcdce6;
   border-radius: 8px;
   padding: 0 24px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 form textarea {
@@ -39,6 +40,11 @@ form textarea {
   border-radius: 8px;
   padding: 16px 24px;
   line-height: 24px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+form textarea:focus, form input:focus {
+  box-shadow: 0 14px 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.12);
 }
 
 .button {
