--- a/frontend/src/pages/Profile/styles.css
+++ b/frontend/src/pages/Profile/styles.css
@@ -56,10 +56,12 @@
     padding: 24px;
     border-radius: 8px;
     position: relative;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .profile-container ul li:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 4px 8px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.12), 0 10px 10px rgba(0,0,0,0.12);
 }
 
 .profile-container ul li button{
