Alterado espaçamento de alguns elementos

--- a/frontend/src/pages/NewIncident/styles.css
+++ b/frontend/src/pages/NewIncident/styles.css
@@ -24,6 +24,7 @@
 .new-incident-container .content section {
     width: 100%;
     max-width: 380px;
+    margin-right: 30px;
 }
 
 .new-incident-container .content section h1 {
