--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -9,11 +9,14 @@
     justify-content: space-between;
 }
 
+.logon-container section.form img {
+    margin-right: 30px;
+}
 
 .logon-container section.form {
     width: 100%;
     max-width: 350px;
-    margin-right: 30px;
+    margin: 30px;
 }
 
 .logon-container section.form form {
