--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -24,6 +24,7 @@
 .register-container .content section {
     width: 100%;
     max-width: 380px;
+    margin-right: 30px;
 }
 
 .register-container .content section h1 {
@@ -37,7 +38,7 @@
     line-height: 32px;
 }
 
-.register-container.content .content form{
+.register-container .content form{
     width: 100%;
     max-width: 450px;
 }
